RPi/WiFiRouter/etc/iptables.rules
# Generated by iptables-save v1.6.0 on Mon Nov 13 17:31:10 2017
*nat
:PREROUTING ACCEPT [114:7946]
:INPUT ACCEPT [50:3882]
:OUTPUT ACCEPT [99:6897]
:POSTROUTING ACCEPT [24:1708]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Nov 13 17:31:10 2017
# Generated by iptables-save v1.6.0 on Mon Nov 13 17:31:10 2017
*filter
:INPUT ACCEPT [109:8802]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [95:9896]
#-A FORWARD -j LOG
-A FORWARD -d 172.217.9.46/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 172.217.9.14/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 216.58.200.238/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 172.217.4.238/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 216.58.212.110/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 216.58.209.142/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 172.217.16.206/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 216.58.204.14/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 172.217.12.206/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 216.58.211.142/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 172.217.22.174/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 172.217.21.174/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 173.194.19.152/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 173.194.19.167/32 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 172.217.0.0/16 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 172.217.21.174/32 -j DROP
-A FORWARD -d 173.194.19.0/16 -j DROP
-A FORWARD -d 74.125.0.0/16 -j DROP
-A FORWARD -d 209.85.128.0/17 -j DROP
-A FORWARD -d 216.58.0.0/16 -j DROP
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
COMMIT
# Completed on Mon Nov 13 17:31:10 2017
